--- a/app/src/main/res/layout/login_password_input.xml
+++ b/app/src/main/res/layout/login_password_input.xml
@@ -30,10 +30,10 @@
             android:hint="@string/password"
             android:textColor="@color/black"
             android:text="123456a"
-            style="@android:style/TextAppearance.Widget.EditText"/>
+            style="@android:style/TextAppearance.Widget.EditText"
+            android:inputType="textPassword"/>
 
     </android.support.design.widget.TextInputLayout>
-
 
 
 
