--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -35,4 +35,8 @@
     <color name="ripple">#F06292</color>
     <color name="accent_pressed">#C2185B</color>
     <color name="accent">#E91E63</color>
+
+    <color name="colorPrimaryLight100">#B3E5FC</color>
+    <!-- the activated state color -->
+    <color name="activated">#929292</color>
 </resources>
