--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,79 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-    android:id="@+id/profile_content"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:fab="http://schemas.android.com/apk/res-auto"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  android:id="@+id/profile_content"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  android:fitsSystemWindows="true">
+
+  <android.support.v7.widget.RecyclerView
+    android:id="@+id/my_feed_list_view"
+    android:padding="5dp"
+    android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/grid_feed_list_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+    app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
 
-    <!--<android.support.design.widget.AppBarLayout-->
-    <!--android:id="@+id/appbar"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--app:layout_anchorGravity="bottom|right|end"-->
-    <!--android:theme="@style/Toolbar.Profile"-->
-    <!--&gt;-->
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/appbar"
+  <android.support.design.widget.AppBarLayout
+    android:id="@+id/appbar"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_alignParentTop="true"
+    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+    <android.support.design.widget.CollapsingToolbarLayout
+      android:id="@+id/collapsing_toolbar"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:fitsSystemWindows="true"
+      app:contentScrim="?attr/colorPrimary"
+      app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+      <TextView
+        android:id="@+id/toolbar_title"
+        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:fitsSystemWindows="true"
+        android:scaleType="centerCrop"
+        android:text="@string/profile_toolbar_label"
+        android:textColor="@android:color/white"
+        app:layout_collapseMode="parallax" />
+
+      <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+        android:background="@android:color/white"
+        app:layout_collapseMode="pin"
+        app:popupTheme="@style/Toolbar.Profile">
 
-        <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/collapsing_toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fitsSystemWindows="true"
-            app:contentScrim="?attr/colorPrimary"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+        <include
+          android:id="@+id/anchor_header"
+          layout="@layout/profile_header"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content" />
 
+      </android.support.v7.widget.Toolbar>
 
-            <include layout="@layout/toolbar_icon"
-                     android:fitsSystemWindows="true"
-                     android:scaleType="centerCrop"
-                     app:layout_collapseMode="parallax"/>
+    </android.support.design.widget.CollapsingToolbarLayout>
 
+  </android.support.design.widget.AppBarLayout>
 
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@android:color/white"
-                app:layout_collapseMode="pin"
-                app:popupTheme="@style/Toolbar.Profile">
-
-                <include
-                    layout="@layout/profile_header"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    />
-
-            </android.support.v7.widget.Toolbar>
-
-        </android.support.design.widget.CollapsingToolbarLayout>
-
-    </android.support.design.widget.AppBarLayout>
-
-    <!--<com.melnykov.fab.FloatingActionButton-->
-        <!--android:id="@+id/fab"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_gravity="bottom|right"-->
-        <!--android:layout_margin="16dp"-->
-        <!--android:src="@drawable/ic_add_white_24dp"-->
-        <!--fab:elevation="8dp"-->
-        <!--fab:fab_colorNormal="@color/primary"-->
-        <!--fab:fab_colorPressed="@color/primary_dark"-->
-        <!--fab:fab_colorRipple="@color/primary_light"-->
-        <!--fab:fab_shadow="true"/>-->
+  <android.support.design.widget.FloatingActionButton
+    android:id="@+id/fab_edit_profile"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_margin="16dp"
+    android:clickable="true"
+    app:fabSize="mini"
+    android:src="@drawable/ic_edit_black_24dp"
+    app:layout_anchor="@id/anchor_header"
+    app:layout_anchorGravity="bottom|left|end" />
 </android.support.design.widget.CoordinatorLayout>
