--- a/app/src/main/res/layout/fragment_my_news.xml
+++ b/app/src/main/res/layout/fragment_my_news.xml
@@ -18,17 +18,18 @@
       android:layout_width="match_parent"
       android:layout_height="?attr/actionBarSize"
       android:animateLayoutChanges="true"
-      app:popupTheme="@style/Toolbar">
+      app:popupTheme="@style/Toolbar"
+      />
 
-      <TextView
-        android:id="@+id/toolbar_title"
-        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="@string/my_news_toolbar_label"
-        android:textColor="@android:color/white" />
-    </android.support.v7.widget.Toolbar>
+    <TextView
+      android:id="@+id/toolbar_title"
+      style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_gravity="center"
+      android:text="@string/my_news_toolbar_label"
+      android:textColor="@android:color/white" />
+
 
   </android.support.design.widget.AppBarLayout>
   <android.support.v4.widget.NestedScrollView
