--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -8,20 +8,19 @@
 
   <android.support.v7.widget.RecyclerView
     android:id="@+id/my_feed_list_view"
-    android:padding="5dp"
-    android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
+    android:padding="5dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-
 
   <android.support.design.widget.AppBarLayout
     android:id="@+id/appbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_alignParentTop="true"
+    android:background="@color/white"
+    android:fitsSystemWindows="true"
     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-
     <android.support.design.widget.CollapsingToolbarLayout
       android:id="@+id/collapsing_toolbar"
       android:layout_width="match_parent"
@@ -29,38 +28,40 @@
       android:fitsSystemWindows="true"
       app:contentScrim="?attr/colorPrimary"
       app:layout_scrollFlags="scroll|exitUntilCollapsed">
-
-      <TextView
-        android:id="@+id/toolbar_title"
-        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:fitsSystemWindows="true"
-        android:scaleType="centerCrop"
-        android:text="@string/profile_toolbar_label"
-        android:textColor="@android:color/white"
-        app:layout_collapseMode="parallax" />
-
       <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/white"
+        android:layout_height="?attr/actionBarSize"
         app:layout_collapseMode="pin"
-        app:popupTheme="@style/Toolbar.Profile">
-
-        <include
-          android:id="@+id/anchor_header"
-          layout="@layout/profile_header"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content" />
-
+        android:background="@color/white"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
       </android.support.v7.widget.Toolbar>
+      <include
+        android:id="@+id/anchor_header"
+        layout="@layout/profile_header"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"/>
+        android:layout_gravity="center"
+        android:fitsSystemWindows="true"
+        android:scaleType="centerCrop"
+        app:layout_collapseMode="parallax" />
+      <!--<TextView-->
+      <!--android:id="@+id/toolbar_title"-->
+      <!--style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"-->
+      <!--android:layout_width="wrap_content"-->
+      <!--android:layout_height="wrap_content"-->
+      <!--android:layout_gravity="center"-->
+      <!--android:fitsSystemWindows="true"-->
+      <!--android:scaleType="centerCrop"-->
+      <!--android:text="@string/profile_toolbar_label"-->
+      <!--android:textColor="@android:color/white"-->
+      <!--app:layout_collapseMode="parallax" />-->
+
 
     </android.support.design.widget.CollapsingToolbarLayout>
-
   </android.support.design.widget.AppBarLayout>
+
 
   <android.support.design.widget.FloatingActionButton
     android:id="@+id/fab_edit_profile"
@@ -68,8 +69,9 @@
     android:layout_height="wrap_content"
     android:layout_margin="16dp"
     android:clickable="true"
-    app:fabSize="mini"
     android:src="@drawable/ic_edit_black_24dp"
+    app:fabSize="mini"
     app:layout_anchor="@id/anchor_header"
     app:layout_anchorGravity="bottom|left|end" />
+
 </android.support.design.widget.CoordinatorLayout>
