--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -32,36 +32,21 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        app:layout_collapseMode="pin"
         android:background="@color/white"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
-      </android.support.v7.widget.Toolbar>
+        app:layout_collapseMode="pin"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
       <include
         android:id="@+id/anchor_header"
         layout="@layout/profile_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"/>
+        android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
         android:layout_gravity="center"
         android:fitsSystemWindows="true"
         android:scaleType="centerCrop"
         app:layout_collapseMode="parallax" />
-      <!--<TextView-->
-      <!--android:id="@+id/toolbar_title"-->
-      <!--style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"-->
-      <!--android:layout_width="wrap_content"-->
-      <!--android:layout_height="wrap_content"-->
-      <!--android:layout_gravity="center"-->
-      <!--android:fitsSystemWindows="true"-->
-      <!--android:scaleType="centerCrop"-->
-      <!--android:text="@string/profile_toolbar_label"-->
-      <!--android:textColor="@android:color/white"-->
-      <!--app:layout_collapseMode="parallax" />-->
-
-
     </android.support.design.widget.CollapsingToolbarLayout>
   </android.support.design.widget.AppBarLayout>
-
 
   <android.support.design.widget.FloatingActionButton
     android:id="@+id/fab_edit_profile"
