--- a/app/src/main/res/layout/profile_input_user_phone.xml
+++ b/app/src/main/res/layout/profile_input_user_phone.xml
@@ -26,7 +26,7 @@
     app:layout_gravity="fill_horizontal|center" />
 
   <ImageButton
-    android:id="@+id/delete_param_button"
+    android:id="@+id/clear_phone_button"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@drawable/selector_delete_image_button"
