--- a/app/src/main/res/layout/profile_input_user_name.xml
+++ b/app/src/main/res/layout/profile_input_user_name.xml
@@ -26,7 +26,7 @@
     android:text="@string/user_name" />
 
   <ImageButton
-    android:id="@+id/delete_param_button"
+    android:id="@+id/clear_name_button"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@drawable/selector_delete_image_button"
