--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,7 @@
     <item name="colorPrimaryDark">@color/primary_dark</item>
     <item name="colorAccent">@color/accent</item>
     <item name="toolbarStyle">@style/Toolbar</item>
-    <item name="preferenceTheme">@style/AppPreferenceTheme</item>
+    <item name="preferenceTheme">@style/AppTheme.Settings</item>
   </style>
 
   <!--main activity toolbar style-->
@@ -32,19 +32,6 @@
 
   </style>
 
-
-  <!--Custom Preference Theme inherits from the v14 support library Material Theme -->
-  <style name="AppPreferenceTheme" parent="@style/PreferenceFixTheme">
-    <item name="preferenceFragmentCompatStyle">@style/PreferenceFixTheme</item>
-  </style>
-
-
-  <!-- Style for a custom Preference Entry -->
-  <style name="AppPreference">
-    <item name="android:layout">@layout/preference_material</item>
-  </style>
-
-
   <!--Splash Screen Theme-->
   <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
     <item name="android:windowBackground">@drawable/background_splash</item>
@@ -56,10 +43,11 @@
   </style>
 
   <!--Setting Screen Theme-->
-  <style name="AppTheme.Settings" parent="AppTheme">
+  <style name="AppTheme.Settings" parent="PreferenceThemeOverlay.v14.Material">
     <item name="android:textColorPrimary">@color/primary_text</item>
     <item name="toolbarStyle">@style/Toolbar</item>
   </style>
+
 
   <!--Style for  Login Screen TextInputLayout-->
 
@@ -135,11 +123,15 @@
   </style>
 
   <style name="AppTheme.Widget.InputSearchParamField" parent="AppTheme">
-
     <item name="android:textColor">@color/app_black</item>
     <item name="android:background">@drawable/field_shape</item>
     <item name="android:textSize">12sp</item>
+  </style>
 
+  <style name="AppTheme.Widget.InputPasswordParamField" parent="AppTheme">
+    <item name="android:textColor">@color/app_black</item>
+    <item name="android:textSize">12sp</item>
+    <item name="android:background">@drawable/ract_shape_border</item>
 
   </style>
 
