--- a/app/src/main/res/layout/input_item_new_password_again.xml
+++ b/app/src/main/res/layout/input_item_new_password_again.xml
@@ -32,7 +32,7 @@
       android:ems="1"
       android:gravity="fill_horizontal"
       android:hint="@string/hint_new_password_again"
-      android:inputType="textMultiLine"
+      android:inputType="textPassword"
       android:textColor="@color/app_black" />
   </android.support.design.widget.TextInputLayout>
 
