update comment implementetion

--- a/app/src/main/res/layout/link_sign_up_screen.xml
+++ b/app/src/main/res/layout/link_sign_up_screen.xml
@@ -11,7 +11,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="@dimen/activity_link_margin"
-            android:text="@string/lable_sign_up"
+            android:text="@string/label_sign_up"
             android:textColor="@color/secondary_text"
            />
 
