--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -6,48 +6,63 @@
   android:layout_height="match_parent"
   android:fitsSystemWindows="true">
 
+
   <android.support.v7.widget.RecyclerView
     android:id="@+id/my_feed_list_view"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
+    android:layout_height="wrap_content"
     android:padding="5dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
   <android.support.design.widget.AppBarLayout
     android:id="@+id/appbar"
+    style="@style/CollapsingToolbarStyle"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white"
-    android:fitsSystemWindows="true"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+    android:paddingBottom="@dimen/abc_list_item_padding_horizontal_material"
+    android:paddingTop="@dimen/abc_list_item_padding_horizontal_material"
+
+    android:fitsSystemWindows="true">
     <android.support.design.widget.CollapsingToolbarLayout
       android:id="@+id/collapsing_toolbar"
       android:layout_width="match_parent"
-      android:layout_height="match_parent"
+      android:layout_height="wrap_content"
       android:fitsSystemWindows="true"
       app:contentScrim="?attr/colorPrimary"
       app:layout_scrollFlags="scroll|exitUntilCollapsed">
-      <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/white"
-        app:layout_collapseMode="pin"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
-      <include
-        android:id="@+id/anchor_header"
-        layout="@layout/profile_header"
+      <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
-        android:layout_gravity="center"
-        android:fitsSystemWindows="true"
-        android:scaleType="centerCrop"
-        app:layout_collapseMode="parallax" />
+        android:orientation="vertical">
+        <android.support.v7.widget.Toolbar
+          android:id="@+id/toolbar"
+          android:layout_width="match_parent"
+          android:layout_height="?attr/actionBarSize"
+          app:layout_collapseMode="pin"
+
+          app:popupTheme="@style/Toolbar">
+          <TextView
+            android:id="@+id/toolbar_title"
+            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/profile_toolbar_label"
+            android:textColor="@android:color/white" />
+        </android.support.v7.widget.Toolbar>
+        <include
+          android:id="@+id/anchor_header"
+          layout="@layout/profile_header"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
+          android:layout_gravity="center"
+          android:fitsSystemWindows="true"
+          android:scaleType="centerCrop"
+          app:layout_collapseMode="parallax" />
+      </LinearLayout>
     </android.support.design.widget.CollapsingToolbarLayout>
   </android.support.design.widget.AppBarLayout>
-
   <android.support.design.widget.FloatingActionButton
     android:id="@+id/fab_edit_profile"
     android:layout_width="wrap_content"
@@ -58,5 +73,4 @@
     app:fabSize="mini"
     app:layout_anchor="@id/anchor_header"
     app:layout_anchorGravity="bottom|left|end" />
-
 </android.support.design.widget.CoordinatorLayout>
