--- a/app/src/main/res/layout/item_edit_detail_user_news.xml
+++ b/app/src/main/res/layout/item_edit_detail_user_news.xml
@@ -24,11 +24,11 @@
         layout="@layout/input_item_comment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/activity_link_margin"
+        android:layout_margin="@dimen/layout_margin"
         />
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/comment_recycler_view"
+        android:id="@+id/view_comments_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
