--- a/app/src/main/res/layout/item_user_news_details.xml
+++ b/app/src/main/res/layout/item_user_news_details.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
-  android:id="@+id/item_header"
+  android:id="@+id/layout_item_header"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
   app:columnCount="2">
