--- a/app/src/main/res/layout/fragment_feed_list.xml
+++ b/app/src/main/res/layout/fragment_feed_list.xml
@@ -10,7 +10,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <android.support.design.widget.CoordinatorLayout
-      android:id="@+id/loyout_feed_content"
+      android:id="@+id/layout_feed_content"
       android:layout_width="match_parent"
       android:layout_height="match_parent">
       <android.support.design.widget.AppBarLayout
