--- a/app/src/main/res/layout/fragment_preference.xml
+++ b/app/src/main/res/layout/fragment_preference.xml
@@ -28,5 +28,5 @@
   <FrameLayout
     android:id="@+id/layout_list_container"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"></FrameLayout>
+    android:layout_height="wrap_content"/>
 </LinearLayout>
